--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "autoprefixer": "^10.4.4",
+    "chart.js": "^3.7.1",
+    "next": "12.1.5",
+    "postcss": "^8.4.12",
+    "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-select": "^5.3.2",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint": "8.13.0",
+    "eslint-config-next": "12.1.5",
+    "tailwindcss": "^3.0.24"
   }
 }
